--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
+    "terser": "^5.43.1",
     "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
