--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,5 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "vueIndentScriptAndStyle": false,
-  "endOfLine": "lf"
+  "endOfLine": "auto"
 }
