--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
+    "dotenv": "^17.2.1",
     "element-plus": "^2.4.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.0",
